fixed the green Redact  button z-index issue

--- a/polaris-ui/src/app/common/presentation/components/Modal.module.scss
+++ b/polaris-ui/src/app/common/presentation/components/Modal.module.scss
@@ -10,8 +10,9 @@
   //  the wheel and starts scrolling itself, rather than the modal content.
   // 3) z-index: 3 seems to be given to the text and annotation layer of pdf.js
   // 4) z-index: 4 is used by the pdf viewer redaction summary footer
-  // So use z-index: 5
-  z-index: 5;
+  // 4) z-index: 6 is used by the redaction button
+  // So use z-index: 7
+  z-index: 7;
 }
 
 .modalContent {
